--- a/action.yml
+++ b/action.yml
@@ -47,7 +47,7 @@ runs:
         rm zap.tar.gz
 
         # Start ZAP in daemon mode
-        ./zap/zap.sh -daemon -host 0.0.0.0 -port 8080 &
+        ./zap/zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.key=null &
         
         # Wait for ZAP to start
         echo "Waiting for ZAP to initialize..."
